# Store_Fastapi_Project

./: .dockerignore  .env  .env.sample  .gitignore  Dockerfile  alembic.ini  config.py  docker-compose.yaml  main.py  middleware.py  pyproject.toml  schemas.py  tasks.py  websocket.py
backend/: db.py  db_depends.py
maigrations/: env.py
migrations/: env.py
migrations/versions/: 13549cc57801_11.py  fc4e17348137_initial_migration.py
models/: categories.py  products.py  reviews.py  users.py
routers/: auth.py  categories.py  permissions.py  products.py  reviews.py  tests.py  websockets.py
