[tool.poetry]
name = "fastapiproject1"
version = "0.1.0"
description = ""
authors = ["Anton Gromov <seed14112@yaandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.12"
uvicorn = "^0.34.0"
sqlalchemy = "^2.0.40"
alembic = "^1.15.2"
python-slugify = "^8.0.4"
asyncpg = "^0.30.0"
greenlet = "^3.1.1"
passlib = "^1.7.4"
bcrypt = "4.0.1"
python-multipart = "^0.0.20"
pyjwt = "^2.10.1"
dotenv = "^0.9.9"
loguru = "^0.7.3"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
